baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__03_hir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== HIR ITEMS ===
function Bar {
  return: Int
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Literal(Int(1))
      Idx::<Expr>(1): Call { callee: Idx::<Expr>(0), args: [] }
      Idx::<Expr>(2): Block { stmts: [Idx::<Stmt>(0)], tail_expr: None }
    ]
    stmts: [
      Idx::<Stmt>(0): Let { pattern: Idx::<Pattern>(0), type_annotation: None, initializer: Some(Idx::<Expr>(1)) }
    ]
    root: Idx::<Expr>(2)
  }
}
function Foo {
  params: [x: Int]
  return: Int
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Path("x")
      Idx::<Expr>(1): Literal(Int(1))
      Idx::<Expr>(2): Binary { op: Add, lhs: Idx::<Expr>(0), rhs: Idx::<Expr>(1) }
      Idx::<Expr>(3): Block { stmts: [], tail_expr: Some(Idx::<Expr>(2)) }
    ]
    root: Idx::<Expr>(3)
  }
}
