baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 9818
---
=== MIR2 ===
fn user.array_length() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: 1 | 2 | 3[] // array
    let _2: 1 | 2 | 3[]

    bb0: {
        _1 = [const 1_i64, const 2_i64, const 3_i64];
        _2 = copy _1;
        _0 = call const fn baml.Array.length(copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Foo(x: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param

    bb0: {
        _0 = copy _1 + const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.GreetBaz(n: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // n // param
    let _2: user.Baz // baz
    let _3: user.Baz

    bb0: {
        _2 = Baz { copy _1 };
        _3 = copy _2;
        _0 = call const fn user.Baz.Greeting(copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.param_in_if_statement(b: bool) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: bool // b // param

    bb0: {
        branch copy _1 -> [bb2, bb1];
    }

    bb1: {
        _0 = const 2_i64;
        goto -> bb3;
    }

    bb2: {
        _0 = const 1_i64;
        goto -> bb3;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.Greeting(self: user.Baz) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: user.Baz // self // param
    let _2: string
    let _3: string

    bb0: {
        _3 = copy _1.0;
        _2 = const "Hello, " + copy _3;
        _0 = copy _2 + const "!";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Bar() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = call const fn user.Foo(const 1_i64) -> [bb1];
    }

    bb1: {
        _0 = copy _1;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
