baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
function Bar() -> int
└─ Block(1 stmts): void
   └─ Let x: unknown
      └─ Call: unknown
         └─ Literal(Int(1)): int

function Foo(x: int) -> int
├─ param x: int
└─ Block(0 stmts + tail): int
   └─ Binary(Add): int
      ├─ Path(x): int
      └─ Literal(Int(1)): int
