baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__04_tir.snap
---
source: target/debug/build/baml_tests-40b0bd756827c945/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function array_length:
    Return: Int
  Function param_in_if_statement:
    Return: Union([Literal(Int(1)), Literal(Int(2))])
  Function Bar:
    Return: Int
  Function Foo:
    Return: Int
  Function GreetBaz:
    Return: Unknown
    Errors:
      - Expected 0 args, found 1
  Function Baz.Greeting:
    Return: Unknown
