baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: expected 0 argument(s), got 1
   ╭─[ builtin_call.baml:3:11 ]
   │
 3 │     return baml.Array.length(array);
   │           ────────────┬────────────  
   │                       ╰────────────── expected 0 argument(s), got 1
   │ 
   │ Note: Error code: E0001
───╯
