baml_language/crates/baml_tests/snapshots/function_call/baml_tests__function_call__06_codegen.snap
---
source: target/debug/build/baml_tests-eb448e436f8a003a/out/generated_tests.rs
expression: output
---
=== BYTECODE ===
Functions: 6
Objects: 27
Globals: 24

Function Bar (arity: 0, kind: Exec):
     0   LOAD_CONST 0     (null)
     1   LOAD_GLOBAL 22   (<fn Foo>)
     2   LOAD_CONST 1     (1)
     3   CALL 1           
     4   STORE_VAR 1      (x)
     5   LOAD_VAR 1       (x)
     6   RETURN           

Function Foo (arity: 1, kind: Exec):
     0   LOAD_VAR 1     (x)
     1   LOAD_CONST 0   (1)
     2   BIN_OP +       
     3   RETURN         

Function GreetBaz (arity: 1, kind: Exec):
     0    LOAD_CONST 0       (null)
     1    LOAD_CONST 0       (null)
     2    ALLOC_INSTANCE 0   (<class Baz>)
     3    COPY 0             
     4    LOAD_VAR 1         (n)
     5    STORE_FIELD 0      
     6    STORE_VAR 3        (baz)
     7    LOAD_GLOBAL 19     (<fn Greeting>)
     8    CALL 0             
     9    STORE_VAR 2        (_0)
     10   LOAD_VAR 2         (_0)
     11   RETURN             

Function Greeting (arity: 1, kind: Exec):
     0   LOAD_CONST 0   (Hello, )
     1   LOAD_VAR 1     (self)
     2   LOAD_FIELD 0   
     3   BIN_OP +       
     4   LOAD_CONST 1   (!)
     5   BIN_OP +       
     6   RETURN         

Function array_length (arity: 0, kind: Exec):
     0    LOAD_CONST 0    (null)
     1    LOAD_CONST 0    (null)
     2    LOAD_CONST 1    (1)
     3    LOAD_CONST 2    (2)
     4    LOAD_CONST 3    (3)
     5    ALLOC_ARRAY 3   
     6    STORE_VAR 2     (array)
     7    LOAD_GLOBAL 0   (<fn baml.Array.length>)
     8    LOAD_VAR 2      (array)
     9    CALL 1          
     10   STORE_VAR 1     (_0)
     11   LOAD_VAR 1      (_0)
     12   RETURN          

Function param_in_if_statement (arity: 1, kind: Exec):
     0    LOAD_CONST 0           (null)
     1    LOAD_VAR 1             (b)
     2    POP_JUMP_IF_FALSE +2   (to 4)
     3    JUMP +4                (to 7)
     4    LOAD_CONST 1           (2)
     5    STORE_VAR 2            (_0)
     6    JUMP +3                (to 9)
     7    LOAD_CONST 2           (1)
     8    STORE_VAR 2            (_0)
     9    LOAD_VAR 2             (_0)
     10   RETURN
